src/test/deca/syntax/valid/expr/test_expr_sum.deca
// Description:
//    test de programme syntaxiquement correct
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 2;
    if(a + 1 == 3) {
        a = 2;
    }
}