src/test/deca/syntax/invalid/inst/test_inst_printx_without_parent.deca
// Description:
//    tests de programme syntaxiquement incorrects : pas de parenthese fermante
//
// Resultats:
//    Ligne 13:  missing ')' at ';'
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 1, b = 2;
    println(a + b;
}